--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="prompt_nickname">Your nickname</string>
     <string name="action_sign_in">Sign in</string>
     <string name="error_field_required">This field is required</string>
+    <string name="title_activity_chatting">ChattingActivity</string>
 </resources>
